# Madventures

./: .gitignore  CMakeLists.txt  build.bat  imgui.ini  map.json
layouts/: arena_ui.json  default.json
lib/imgui/: unity_imgui.cpp
lib/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
maps/: arena.json  city.json  default.json
src/: combat_manager.cpp  combat_manager.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  map_editor.cpp  map_editor.h  player.cpp  player.h  renderer.cpp  renderer.h  tile.cpp  tile.h  tilemap.cpp  tilemap.h  ui_button.cpp  ui_button.h  ui_editor.cpp  ui_editor.h  ui_element.cpp  ui_element.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h  unity_game.cpp
